--- a/Python Basics/Decorator.ipynb
+++ b/Python Basics/Decorator.ipynb
@@ -4,21 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Decorator**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Decorators in Python are a powerful and flexible way to modify the behavior of functions or methods. They are a type of higher order function, meaning they take one function as an argument & return another function as a result.Decorators are often used to add functionality to existing functions or methods in a clean, readable, and reusable way."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### **How Decorators work**\n",
+    "## **Decorator**\n",
+    "\n",
+    "Decorators are a powerful and flexible feature in Python that allows you to modify or enhance the behavior of functions or methods without changing their actual code. A decorator is essentially a higher-order function, meaning it takes another function as an argument and extends its behavior.\n",
+    "\n",
+    "### **How Decorators work**\n",
     "\n",
     "Adecorator is a function that takes another function as an argument & extends its behavior without explicitly modififying it. The syntax of using decorators is the <code>@decorator_name</code> syntax placed above the function definition."
    ]
@@ -27,15 +17,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Creating & Using Decorators**\n",
-    "##### **Function Decorators**\n",
+    "#### **1. Basic Concept of Decorators**\n",
     "\n",
-    "Function decorators modify or extend the behavior of functions. Here's a simple example of a function decorator that logs the execution time of the decorated function."
+    "A decorator is a function that wraps another function to add additional functionality. This is useful for logging, access control, caching, or any functionality that needs to be reused across multiple functions.\n",
+    "\n",
+    "#### **2. How Decorators Work**\n",
+    "\n",
+    "- Decorator Function (my_decorator): It takes a function func as an argument and returns another function, typically called wrapper, which will contain the additional behavior.\n",
+    "- Wrapper Function: Inside the decorator, the wrapper function is defined. It calls the original function (func), while allowing you to add any logic before and after the call.\n",
+    "- Applying the Decorator: Using the `@my_decorator` syntax is the same as doing `say_hello = my_decorator(say_hello)`.\n",
+    "\n",
+    "#### **3. Using `*args` and `**kwargs**`**\n",
+    "To make the decorator work with functions that have any number of arguments, you can use `*args` and `**kwargs` to pass arbitrary positional and keyword arguments."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +47,7 @@
     }
    ],
    "source": [
+    "# Define a simple decorator\n",
     "def my_decorator(func):\n",
     "    def wrapper():\n",
     "        print(\"Something is happening before the function is called.\")\n",
@@ -56,10 +55,12 @@
     "        print(\"Something is happening after the function is called.\")\n",
     "    return wrapper\n",
     "\n",
+    "# Apply the decorator to a function\n",
     "@my_decorator\n",
     "def say_hello():\n",
     "    print(\"Hello!\")\n",
     "\n",
+    "# Call the decorated function\n",
     "say_hello()"
    ]
   },
@@ -73,49 +74,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calling method display_value of <__main__.MyClass object at 0x0000021E15F68470>\n",
-      "Value: 42\n"
+      "Before method execution.\n",
+      "Hello from the class method!\n",
+      "After method execution.\n"
      ]
     }
    ],
    "source": [
-    "def method_logger(func):\n",
-    "    def wrapper(self, *args, **kwargs):\n",
-    "        print(f\"Calling method {func.__name__} of {self}\")\n",
-    "        return func(self, *args, **kwargs)\n",
+    "# Define a method decorator\n",
+    "def my_method_decorator(func):\n",
+    "    def wrapper(self):\n",
+    "        print(\"Before method execution.\")\n",
+    "        func(self)\n",
+    "        print(\"After method execution.\")\n",
     "    return wrapper\n",
     "\n",
+    "# Create a class and apply the decorator to a method\n",
     "class MyClass:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
+    "    @my_method_decorator\n",
+    "    def say_hello(self):\n",
+    "        print(\"Hello from the class method!\")\n",
     "\n",
-    "    @method_logger\n",
-    "    def display_value(self):\n",
-    "        print(f\"Value: {self.value}\")\n",
-    "\n",
-    "obj = MyClass(42)\n",
-    "obj.display_value()"
+    "# Create an instance of the class and call the decorated method\n",
+    "obj = MyClass()\n",
+    "obj.say_hello()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Decorator with Arguments**\n",
+    "### **Decorator with Arguments**\n",
     "\n",
-    "Sometime, you may need to pass arguments to the decorated function. You can do this by defining *args & **kwargs in the function"
+    "#### **1. `*args`: Non-Keyword (Positional) Arguments**\n",
+    "- *args allows you to pass a variable number of positional arguments to a function.\n",
+    "- Inside the function, *args will be treated as a tuple containing all the positional arguments."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(*args):\n",
+    "    for arg in args:\n",
+    "        print(arg)\n",
+    "\n",
+    "my_function(1, 2, 3, 4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alice!\n",
+      "Hello, Bob!\n",
+      "Hello, Charlie!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(*names):\n",
+    "    for name in names:\n",
+    "        print(f\"Hello, {name}!\")\n",
+    "\n",
+    "greet(\"Alice\", \"Bob\", \"Charlie\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **2. `**kwargs`: Keyword Arguments**\n",
+    "- `**kwargs` allows you to pass a variable number of keyword arguments to a function (i.e., arguments passed as key=value pairs).\n",
+    "- Inside the function, `**kwargs` will be treated as a dictionary containing all the keyword arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name = sameer\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(**kwargs):\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key} = {value}\")\n",
+    "my_function(name='sameer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Alice\n",
+      "age: 30\n",
+      "city: New York\n"
+     ]
+    }
+   ],
+   "source": [
+    "def introduce(**info):\n",
+    "    for key, value in info.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "\n",
+    "introduce(name=\"Alice\", age=30, city=\"New York\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,13 +228,13 @@
      "output_type": "stream",
      "text": [
       "Something is happening before the function is called.\n",
-      "Hello, Sameer!\n",
+      "Hello, ('Sameer', 'Pasha')!\n",
       "Something is happening after the function is called.\n"
      ]
     }
    ],
    "source": [
-    "def my_decorator(func):\n",
+    "def greet(func):\n",
     "    def wrapper(*arge, **kwargs):\n",
     "        print(\"Something is happening before the function is called.\")\n",
     "        result = func(*arge, **kwargs)\n",
@@ -137,11 +242,11 @@
     "        return result\n",
     "    return wrapper\n",
     "\n",
-    "@my_decorator\n",
-    "def say_hello(name):\n",
+    "@greet\n",
+    "def say_hello(*name):\n",
     "    print(f\"Hello, {name}!\")\n",
     "\n",
-    "say_hello('Sameer')"
+    "say_hello('Sameer','Pasha')"
    ]
   },
   {
@@ -153,76 +258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adding Two Number.\n",
-      "Sum of the Values 15.\n"
+      "Something is happening before the function is called.\n",
+      "Hello, (7, 8)!\n",
+      "Something is happening after the function is called.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def my_decorator(func):\n",
-    "    def wrapper(*arge, **kwargs):\n",
+    "def Addition(s):\n",
+    "    def sum(*arge, **kwargs):\n",
     "        print(\"Adding Two Number.\")\n",
-    "        result = func(*arge, **kwargs)\n",
-    "        print(f\"Sum of the Values {result}.\")\n",
-    "        return result\n",
-    "    return wrapper\n",
+    "        return s(*arge, **kwargs)\n",
+    "    return sum\n",
     "\n",
-    "@my_decorator\n",
-    "def say_hello(a,b):\n",
-    "    return a + b\n",
-    "\n",
-    "say_hello(7,8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding Two Number.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def my_decorator(func):\n",
-    "    def wrapper(*arge, **kwargs):\n",
-    "        print(\"Adding Two Number.\")\n",
-    "        return func(*arge, **kwargs)\n",
-    "    return wrapper\n",
-    "\n",
-    "@my_decorator\n",
-    "def say_hello(a,b):\n",
+    "@Addition\n",
+    "def add(num):\n",
     "    return a + b\n",
     "\n",
     "say_hello(7,8)"
@@ -237,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +312,7 @@
        "2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,13 +350,13 @@
     "#### **Class-Based Decorators**\n",
     "\n",
     "##### **Class Decorators**\n",
-    "- Decorators can also be implemented as class by defining the __call__ method, which makes the class instances callable.\n",
+    "- Decorators can also be implemented as class by defining the `__call__` method, which makes the class instances callable.\n",
     "- Class decorators modify or extend classes. Here's an example that adds a new method to a class:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -380,9 +437,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing say_hello\n",
+      "Hello!\n",
+      "Finished say_hello\n"
+     ]
+    }
+   ],
    "source": [
     "#Logging Decorator:\n",
     "from functools import wraps\n",
@@ -405,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +513,7 @@
      "output_type": "stream",
      "text": [
       "Function complete\n",
-      "slow_function executed in 2.0008656978607178 seconds\n"
+      "slow_function executed in 2.0011398792266846 seconds\n"
      ]
     }
    ],
@@ -471,98 +538,6 @@
     "\n",
     "slow_function()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Iterators**\n",
-    "\n",
-    "An iterator is an object that contains a countable number of values & can be iterated upon, meaning you can traverse throught all the values. In Python, an iterator must implement two special method, __iter__() and __next__().\n",
-    "\n",
-    "**Creating an Itrator**\n",
-    "\n",
-    "1. Define a class with __iter__() and __next__() method:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "class MyIterator:\n",
-    "    def __init__(self, start, end):\n",
-    "        self.current = start\n",
-    "        self.end = end\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        return self\n",
-    "    \n",
-    "    def __next__(self):\n",
-    "        if self.current <= self.end:\n",
-    "            self.current += 1\n",
-    "            result = self.current - 1\n",
-    "            return result\n",
-    "        else:\n",
-    "            raise StopIteration\n",
-    "\n",
-    "my_iterator = MyIterator(1, 10)\n",
-    "\n",
-    "for number in my_iterator:\n",
-    "    print(number)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Using the built-in iter() and next() functions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_list = [1,2,3,4,5,6]\n",
-    "my_iterator = iter(my_list)\n",
-    "\n",
-    "print(next(my_iterator))\n",
-    "print(next(my_iterator))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
