--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -394,7 +394,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.__name = name\n",
+    "        self.__age = age\n",
+    "\n",
+    "    def displayname(self):\n",
+    "        print(self.__name)\n",
+    "\n",
+    "obj = person(\"John\", 30)\n",
+    "obj.displayname()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -628,6 +654,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    ## Constructor\n",
+    "    def __init__(self, name, age):\n",
+    "        self.__name = name\n",
+    "        self.__age = age\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "\n",
+    "    def get_age(self):\n",
+    "        return self.__age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Details:\n",
+      "-----------------\n",
+      "Name: John\n",
+      "Age: 20\n",
+      "Roll No: 101\n"
+     ]
+    }
+   ],
+   "source": [
+    "class student(Person):\n",
+    "    def __init__(self, name, age, rollno):\n",
+    "        super().__init__(name, age)\n",
+    "        self.rollno = rollno\n",
+    "\n",
+    "    def display(self):\n",
+    "        print(\"Student Details:\")\n",
+    "        print(\"-----------------\")\n",
+    "        name1 = super().get_name()\n",
+    "        print(\"Name:\", name1)\n",
+    "        print(\"Age:\", self.get_age())\n",
+    "        print(\"Roll No:\", self.rollno)\n",
+    "\n",
+    "student1 = student(\"John\", 20, 101)\n",
+    "student1.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Rahul, Reg: 101, Branch: CSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Branch(student):\n",
+    "    def __init__(self, name, age, rollno, branch):\n",
+    "        super().__init__(name, age, rollno)\n",
+    "        self.rollno = rollno\n",
+    "        self.branch = branch \n",
+    "\n",
+    "    def get_branch(self):\n",
+    "        name2 = super().get_name()\n",
+    "        return f\"Name: {name2}, Reg: {self.rollno}, Branch: {self.branch}\"\n",
+    "\n",
+    "obj = Branch(\"Rahul\",20,101,\"CSE\")\n",
+    "print(obj.get_branch())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -646,16 +754,14 @@
     "        self.value = value\n",
     "    \n",
     "    def is_divisible_by_2(self):\n",
-    "        \"\"\"Check if the number is divisible by 2.\"\"\"\n",
     "        return self.value % 2 == 0\n",
     "\n",
     "# Derived class\n",
     "class SpecialNumber(Number):\n",
     "    def __init__(self, value):\n",
-    "        super().__init__(value)  # Initialize the base class with the value\n",
+    "        super().__init__(value) \n",
     "\n",
     "    def check_divisibility(self):\n",
-    "        \"\"\"Check if the number is divisible by 2 and print the result.\"\"\"\n",
     "        if self.is_divisible_by_2():\n",
     "            print(f\"The number {self.value} is divisible by 2.\")\n",
     "        else:\n",
@@ -663,13 +769,13 @@
     "\n",
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
-    "    num = SpecialNumber(10)  # You can change this value to test other numbers\n",
+    "    num = SpecialNumber(10)  \n",
     "    num.check_divisibility()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -719,46 +825,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Woof!\n",
-      "Meow!\n"
+      "Welcome to ws  \n",
+      "Welcome to ws Rahul\n"
      ]
     }
    ],
    "source": [
-    "class Animal:\n",
-    "    def speak(self):\n",
-    "        raise NotImplementedError(\"Subclasses must implement this method\")\n",
+    "## polymorphism\n",
+    "# 1. Overloading\n",
+    "# 2. Overriding\n",
     "\n",
-    "class Dog(Animal):\n",
-    "    def speak(self):\n",
-    "        return \"Woof!\"\n",
+    "# Overloading\n",
+    "class ws:\n",
+    "    def displayinfo(self, name=' '):\n",
+    "        print(\"Welcome to ws \"+name)\n",
     "\n",
-    "class Cat(Animal):\n",
-    "    def speak(self):\n",
-    "        return \"Meow!\"\n",
-    "\n",
-    "def make_animal_speak(animal):\n",
-    "    print(animal.speak())\n",
-    "\n",
-    "# Example usage\n",
-    "if __name__ == \"__main__\":\n",
-    "    dog = Dog()\n",
-    "    cat = Cat()\n",
-    "    \n",
-    "    make_animal_speak(dog)\n",
-    "    make_animal_speak(cat) \n"
+    "obj=ws()\n",
+    "obj.displayinfo()\n",
+    "obj.displayinfo(\"Rahul\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class add:\n",
+    "    def sum(self,a,b):\n",
+    "        return a+b\n",
+    "\n",
+    "s = add()\n",
+    "s.sum(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to ws \n",
+      "Welcome to ws1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Overriding\n",
+    "class ws:\n",
+    "    def displayinfo(self):\n",
+    "        print(\"Welcome to ws \")\n",
+    "\n",
+    "class ws1(ws):\n",
+    "    def displayinfo(self):\n",
+    "        super().displayinfo()\n",
+    "        print(\"Welcome to ws1\")\n",
+    "\n",
+    "obj=ws1()\n",
+    "obj.displayinfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -813,13 +963,27 @@
     "bird = Bird()\n",
     "plane = Airplane()\n",
     "\n",
-    "make_it_fly(bird)    # Output: Flying high\n",
-    "make_it_fly(plane)   # Output: Jet speed\n"
+    "make_it_fly(bird)   \n",
+    "make_it_fly(plane)  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        return \"Some generic sound\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -862,40 +1026,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car engine started.\n"
+      "Triangle has three sides\n"
      ]
     }
    ],
    "source": [
     "from abc import ABC, abstractmethod\n",
+    "class shape(ABC):\n",
+    "    def shape(self):\n",
+    "        print(\"This is a shape\")\n",
     "\n",
-    "class Vehicle(ABC):\n",
     "    @abstractmethod\n",
-    "    def start_engine(self):\n",
+    "    def side(self):\n",
     "        pass\n",
     "\n",
-    "class Car(Vehicle):\n",
-    "    def start_engine(self):\n",
-    "        print(\"Car engine started.\")\n",
+    "class triangle(shape):\n",
+    "    def side(self):\n",
+    "        print(\"Triangle has three sides\")\n",
     "\n",
-    "class Bike(Vehicle):\n",
-    "    def start_engine(self):\n",
-    "        print(\"Bike engine started.\")\n",
-    "\n",
-    "car = Car()\n",
-    "car.start_engine() "
+    "obj = triangle()\n",
+    "obj.side()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -948,6 +1110,40 @@
     "\n",
     "print(f\"Circle area: {circle.area()}\")        \n",
     "print(f\"Circle perimeter: {circle.perimeter()}\")  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car engine started.\n",
+      "Bike engine started.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle(ABC):\n",
+    "    @abstractmethod\n",
+    "    def start_engine(self):\n",
+    "        pass\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        print(\"Car engine started.\")\n",
+    "\n",
+    "class Bike(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        print(\"Bike engine started.\")\n",
+    "\n",
+    "car = Car()\n",
+    "bike = Bike()\n",
+    "car.start_engine()\n",
+    "bike.start_engine()"
    ]
   },
   {
