--- a/Python Basics/Decorator.ipynb
+++ b/Python Basics/Decorator.ipynb
@@ -27,7 +27,7 @@
     "- Wrapper Function: Inside the decorator, the wrapper function is defined. It calls the original function (func), while allowing you to add any logic before and after the call.\n",
     "- Applying the Decorator: Using the `@my_decorator` syntax is the same as doing `say_hello = my_decorator(say_hello)`.\n",
     "\n",
-    "#### **3. Using `*args` and `**kwargs**`**\n",
+    "#### **3. Using `*args` and `**kwargs`**\n",
     "To make the decorator work with functions that have any number of arguments, you can use `*args` and `**kwargs` to pass arbitrary positional and keyword arguments."
    ]
   },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "0.5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
     "def smart_dev(func):\n",
     "    def inner(a,b):\n",
     "        if b>a:\n",
-    "            a,b=b,a\n",
+    "            a,b = b,a\n",
     "        return func(a,b)\n",
     "    return inner\n",
     "\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,10 +114,10 @@
    ],
    "source": [
     "# Define a simple decorator\n",
-    "def my_decorator(func):\n",
+    "def my_decorator(greet):\n",
     "    def wrapper():\n",
     "        print(\"Something is happening before the function is called.\")\n",
-    "        func()\n",
+    "        greet()\n",
     "        print(\"Something is happening after the function is called.\")\n",
     "    return wrapper\n",
     "\n",
@@ -180,13 +180,13 @@
     "### **Decorator with Arguments**\n",
     "\n",
     "#### **1. `*args`: Non-Keyword (Positional) Arguments**\n",
-    "- *args allows you to pass a variable number of positional arguments to a function.\n",
-    "- Inside the function, *args will be treated as a tuple containing all the positional arguments."
+    "- `*args` allows you to pass a variable number of positional arguments to a function.\n",
+    "- Inside the function, `*args` will be treated as a tuple containing all the positional arguments."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,9 @@
       "2\n",
       "3\n",
       "4\n",
-      "5\n"
+      "5\n",
+      "6\n",
+      "10\n"
      ]
     }
    ],
@@ -206,12 +208,12 @@
     "    for arg in args:\n",
     "        print(arg)\n",
     "\n",
-    "my_function(1, 2, 3, 4, 5)"
+    "my_function(1, 2, 3, 4, 5,6,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,14 +245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name = sameer\n"
+      "name = sameer\n",
+      "age = 20\n",
+      "city = nagpur\n",
+      "country = india\n",
+      "name = pasha\n",
+      "age = 21\n",
+      "city = blore\n",
+      "country = india\n"
      ]
     }
    ],
@@ -258,12 +267,13 @@
     "def my_function(**kwargs):\n",
     "    for key, value in kwargs.items():\n",
     "        print(f\"{key} = {value}\")\n",
-    "my_function(name='sameer')"
+    "my_function(name='sameer', age=20, city='nagpur', country='india')\n",
+    "my_function(name='pasha', age=21, city='blore', country='india')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +282,8 @@
      "text": [
       "name: Alice\n",
       "age: 30\n",
-      "city: New York\n"
+      "city: New York\n",
+      "country: USA\n"
      ]
     }
    ],
@@ -281,12 +292,12 @@
     "    for key, value in info.items():\n",
     "        print(f\"{key}: {value}\")\n",
     "\n",
-    "introduce(name=\"Alice\", age=30, city=\"New York\")"
+    "introduce(name=\"Alice\", age=30, city=\"New York\", country=\"USA\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +353,7 @@
        "15"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +399,7 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +491,9 @@
      "output_type": "stream",
      "text": [
       "my_function\n",
-      "Original function\n"
+      "Original function\n",
+      "Calling decorated function\n",
+      "Hello from my_function\n"
      ]
     }
    ],
@@ -501,7 +514,8 @@
     "    print(\"Hello from my_function\")\n",
     "\n",
     "print(my_function.__name__) \n",
-    "print(my_function.__doc__)   "
+    "print(my_function.__doc__) \n",
+    "my_function()"
    ]
   },
   {
@@ -548,40 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9227465\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Memoization Decorator:\n",
-    "def memoize(func):\n",
-    "    cache = {}\n",
-    "    @wraps(func)\n",
-    "    def wrapper(*args):\n",
-    "        if args not in cache:\n",
-    "            cache[args] = func(*args)\n",
-    "        return cache[args]\n",
-    "    return wrapper\n",
-    "\n",
-    "@memoize\n",
-    "def fibonacci(n):\n",
-    "    if n in (0, 1):\n",
-    "        return n\n",
-    "    return fibonacci(n - 1) + fibonacci(n - 2)\n",
-    "\n",
-    "print(fibonacci(35))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +570,7 @@
      "output_type": "stream",
      "text": [
       "Function complete\n",
-      "slow_function executed in 2.0011398792266846 seconds\n"
+      "slow_function executed in 2.0010061264038086 seconds\n"
      ]
     }
    ],
