--- a/Python Basics/2.Python_K_I_V_O.ipynb
+++ b/Python Basics/2.Python_K_I_V_O.ipynb
@@ -2273,7 +2273,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2288,11 +2288,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "37d99e6d4983f94fd607d31c1d056b3b7a9bea88684ae051e8fd79233b8b8e0c"
-   }
   }
  },
  "nbformat": 4,
