--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -1858,7 +1858,7 @@
     "\n",
     "    Hero = []\n",
     "    Heroine = []\n",
-    "    Villain = []b\n",
+    "    Villain = []\n",
     "\n",
     "    for movie, actors in movies.items():\n",
     "        if Name_of_actor in actors:\n",
@@ -1899,7 +1899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
