--- a/Python Basics/Python Basic & Advance.ipynb
+++ b/Python Basics/Python Basic & Advance.ipynb
@@ -64,24 +64,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[225, 144]\n"
+      "225\n",
+      "144\n"
      ]
     }
    ],
    "source": [
     "# Write a Python function that takes a list of integers and returns a new list with each element squared, but only if it is greater than 10.\n",
     "def square_greater_than_10(lst):\n",
-    "    return [x ** 2 for x in lst if x > 10]\n",
+    "    for x in lst:\n",
+    "        if x > 10:\n",
+    "            print(x**2)\n",
     "\n",
-    "# Example usage:\n",
-    "print(square_greater_than_10([5, 15, 3, 12])) "
+    "lst = [5, 15, 3, 12]\n",
+    "square_greater_than_10(lst)"
    ]
   },
   {
@@ -135,12 +138,12 @@
     "# Example usage:\n",
     "dict1 = {'a': 10, 'b': 20}\n",
     "dict2 = {'b': 30, 'c': 40}\n",
-    "print(merge_dicts(dict1, dict2))  # {'a': 10, 'b': 50, 'c': 40}"
+    "print(merge_dicts(dict1, dict2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -283,11 +286,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the difference between is and == operators in Python? Provide an example where using one instead of the other can lead to unexpected results.\n",
+    "\n",
+    "- == (Equality Operator): This operator checks whether the values of two objects are equal, i.e., it checks for equality of the content.\n",
+    "- is (Identity Operator): This operator checks whether two objects refer to the same memory location, i.e., it checks for object identity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comparing two lists with the same content\n",
+    "list1 = [1, 2, 3]\n",
+    "list2 = [1, 2, 3]\n",
+    "\n",
+    "print(list1 == list2)  # because the values are the same\n",
+    "print(list1 is list2)  # because they are two different objects in memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the difference between *args and **kwargs in Python functions? Provide an example where both are used in a single function.\n",
+    "\n",
+    "- `*args` (Non-keyword Arguments):\n",
+    "    - Allows a function to accept a variable number of positional arguments.\n",
+    "    - The arguments are passed as a tuple.\n",
+    "- `**kwargs` (Keyword Arguments):\n",
+    "    - Allows a function to accept a variable number of keyword arguments (arguments with names).\n",
+    "    - The arguments are passed as a dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positional arguments (*args): (1, 2, 3)\n",
+      "Keyword arguments (**kwargs): {'name': 'Alice', 'age': 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def example_function(*args, **kwargs):\n",
+    "    print(\"Positional arguments (*args):\", args)\n",
+    "    print(\"Keyword arguments (**kwargs):\", kwargs)\n",
+    "\n",
+    "# Calling the function\n",
+    "example_function(1, 2, 3, name=\"Alice\", age=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the purpose of the else block in Python’s exception handling? How does it differ from the finally block, and when would you use each?\n",
+    "\n",
+    "1. else Block:\n",
+    "    - The else block is executed only if no exceptions are raised in the try block.\n",
+    "    - It is useful when you want to run code that should only execute if everything in the try block runs successfully without any exceptions.\n",
+    "    - Usage: You use the else block to separate the code that should run after a successful try, making the code more readable and easier to maintain.\n",
+    "\n",
+    "2. finally Block:\n",
+    "    - The finally block is executed no matter what—whether an exception is raised or not.\n",
+    "    - It is typically used for cleanup actions (like closing files, releasing resources, etc.) that should be done regardless of the success or failure of the try block.\n",
+    "    - Usage: You use the finally block when you need to ensure that certain actions (like cleanup) happen regardless of whether an exception occurs or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Division successful, result: 5.0\n",
+      "This runs no matter what.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    result = 10 / 2  # This will succeed\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Error: Division by zero!\")\n",
+    "else:\n",
+    "    print(\"Division successful, result:\", result)\n",
+    "finally:\n",
+    "    print(\"This runs no matter what.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something is happening before the function is called.\n",
+      "Hello, Sameer!\n",
+      "Hello, Pasha!\n",
+      "Something is happening after the function is called.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Explain how you can write a decorator that takes arguments.\n",
+    "def greet(func):\n",
+    "    def wrapper(*arge, **kwargs):\n",
+    "        print(\"Something is happening before the function is called.\")\n",
+    "        result = func(*arge, **kwargs)\n",
+    "        print(\"Something is happening after the function is called.\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@greet\n",
+    "def say_hello(*name):\n",
+    "    for i in name:\n",
+    "        print(f\"Hello, {i}!\")\n",
+    "\n",
+    "say_hello('Sameer','Pasha')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# How to Create, Read, and Write to a Text File in Python (with Examples)\n",
+    "\n",
     "# Writing to a file\n",
     "with open('example.txt', 'w') as file:\n",
     "    file.write(\"Hello, World!\\n\")\n",
@@ -298,13 +449,6 @@
     "    print(\"File content after writing:\")\n",
     "    print(file.read())\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
