--- a/Python Basics/Python Basic & Advance.ipynb
+++ b/Python Basics/Python Basic & Advance.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -273,9 +273,9 @@
     "    def yearly_salary(self):\n",
     "        return self.salary * 12\n",
     "\n",
-    "    @classmethod\n",
-    "    def total_employees(cls):\n",
-    "        return cls.count\n",
+    "    #@classmethod\n",
+    "    def total_employees(): #cls\n",
+    "        return Employee.count\n",
     "\n",
     "# Example usage:\n",
     "emp1 = Employee('Alice', 5000, 'HR')\n",
